--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
+
+    
    
     <header>
       <div class="container">
@@ -21,14 +23,14 @@
       </div>
     </header>
   
-    <section id="hero">
-      <h1>La página de basquet Argentina <br />para el mundo</h1>
+    <section  id="hero">
+      <h1>La página de basquet Argentina<br />para el mundo</h1>
       <button>REGISTRATE</button>
     </section>
 
     <section id="somos-iq">
       <div class="container">
-        <h2>Somos IQBSKT</h2>
+        <h2>Somos <span class="color-acento">IQBSKT</span> </h2>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci
           nobis error quod esse ex mollitia laborum sunt amet! Non a alias totam
